Disable patterns for version update groups
Comment out patterns in groups for root and server.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,8 +14,8 @@ updates:
     groups:
       root-minor-and-patch: # Tên nhóm unique cho root
         applies-to: version-updates
-        patterns:
-          - "*"
+        # patterns:
+        #   - "*"
         update-types:
           - "minor"
           - "patch"
@@ -46,8 +46,8 @@ updates:
     groups:
       server-minor-and-patch: # Tên nhóm unique cho server
         applies-to: version-updates
-        patterns:
-          - "*"
+        # patterns:
+        #   - "*"
         update-types:
           - "minor"
           - "patch"
